--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,28 +1,21 @@
 .App {
-  text-align: center;
+  height: 100vh;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+.App div h1 {
+  position: absolute;
+
+  font-weight: bold;
+  font-size: 150px;
+  color: #33363a;  
+
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%);
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+@media screen and (max-width: 500px){
+  .App div h1 {
+    font-size: 70px;
+  }
 }
